# gprobe

./: Cargo.toml  README.md
.github/workflows/: test.yml
data/: .gitignore  README.md
src/: cli.rs  create.rs  lib.rs  main.rs  runner.rs  tree.rs  utils.rs
src/db/: mod.rs  prefixes.rs  types.rs
