[package]
name = "gprobe"
version = "0.1.0"
edition = "2021"
authors = ["refcell <github.com/refcell>"]
readme = "README.md"
repository = "https://github.com/refcell/gprobe/"
license = "MIT"
description = """
A verbose CLI to probe go-ethereum data structures.
"""
keywords = ["geth", "rust", "evm", "bytecode", "data", "database"]

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
uuid = { version = "1.1.1", features = ["v4"] }

# Telemtry
spinners = "4.1.0"
isatty = "0.1.9"
yansi = "0.5.1"
ansi_term = "0.12.1"
tracing = "0.1.36"
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter", "ansi"] }
chrono = "0.4.22"
teloxide = { version = "0.12", features = ["macros"] }
